# YarpTypeSafeBottle

./: README.md
TypeSafeBottle/: CMakeLists.txt  StructBottle.h  TypeSafeBase.h  TypeSafeBottle.h  TypeSafeExceptions.h  VectorBottle.h  VocabDictionary.h  WrapperBottle.h  YarpTypeSafeBottle.xsd  YarpTypeSafeBottle.xslt  win-generate-code-from-xml.js
TypeSafeBottle/harness/: CMakeLists.txt  StructBottleTest.cpp  TestList.h  TestMessages.h  TestMessages.xml  TestMessages.xsd  TestMessages.xslt  VectorBottleTest.cpp  VocabDictionaryTest.cpp  WrapperBottleTest.cpp  harness.cpp
TypeSafeExamples/: CMakeLists.txt  TypeSafeExamples.xml  TypeSafeExamples.xsd  TypeSafeExamples.xslt
TypeSafeTutorial/: CMakeLists.txt  TypeSafeTutorial.cpp
TypeSafeTutorial/TestMessages/: CMakeLists.txt  DocumentationExamples.xml  TestBottles.h  TestBottles.xml  TestBottles.xsd  TestBottles.xslt
TypeSafeTutorial/TestMessages/TypeSafeBottle/: YarpTypeSafeBottle.xsd  YarpTypeSafeBottle.xslt
